--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 = EdgeCase Ruby Koans
 
+adding something just to commit
+
 The Ruby Koans walk you along the path to enlightenment in order to learn Ruby.
 The goal is to learn the Ruby language, syntax, structure, and some common
 functions and libraries. We also teach you culture. Testing is not just something we
